--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -9,6 +9,7 @@
 body {
   -webkit-font-smoothing: antialiased; // sass-lint:disable-line no-vendor-prefixes
   margin: 0;
+  max-width: 100vw;
 }
 
 main {
