Add Style to Footer

--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -1,5 +1,8 @@
 @import './App';
 @import './Loading';
+@import './Footer';
+@import './TaskForm';
+@import './TaskPopUp';
 
 :root {
   --app-height: 100%;
