--- a/src/assets/stylesheets/Progress.scss
+++ b/src/assets/stylesheets/Progress.scss
@@ -57,7 +57,7 @@ $white: #fff;
   background-color: $white;
   display: flex;
   flex-wrap: nowrap;
-  overflow-y: scroll;
+  overflow-x: scroll;
 
   .progress-container {
     display: flex;
