--- a/src/assets/stylesheets/Global.scss
+++ b/src/assets/stylesheets/Global.scss
@@ -15,5 +15,5 @@ $green-regular: #ace9a9;
 $green-light: #c1efbe;
 $green-lighter: #d5f4d4;
 
-$font: 'Helvalica Neue Light';
+$font: 'WorkSans Regular';
 $font-timer: 'Chathura Regular';
